db integrity and UI mandatory fields
